@@ -1,3 +1,7 @@
+[B]Version 1.3.7 (Nov 1, 2012)[/B]
+- Streamlined initial check for the sagex-api-services plugin upon launch of the addon; this should enable loading the addon's main menu much faster
+- **Note that this change requires you to copy the updated xbmc.js file to your sagetv\sagex\services folder
+
 [B]Version 1.3.6 (Nov 1, 2012)[/B]
 - Handle SageTV recording path setting that is with and without a trailing slash (previously the addon didn't work if you didn't include the trailing slash in your recording path)
 
